--- a/addon/templates/index.hbs
+++ b/addon/templates/index.hbs
@@ -1,5 +1,6 @@
-<h3>All Posts</h3>
+{{#link-to 'new'}}Create new post{{/link-to}}
 
+<h3>All Posts</h3>
 {{#each model as |post|}}
   <h4>
     {{#link-to 'post' post}}
