--- a/addon/templates/post/index.hbs
+++ b/addon/templates/post/index.hbs
@@ -1,1 +1,3 @@
-{{#link-to 'post.comments'}}Comments{{/link-to}}
+{{#if model.comments}}
+  {{#link-to 'post.comments'}}Comments{{/link-to}}
+{{/if}}
